--- a/QuizPage.html
+++ b/QuizPage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quiz Kalkulus</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,74 +14,92 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="quiz.css" />
-  </head>
-  <!-- Navbar -->
-  <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm">
-      <div class="container">
-        <a class="navbar-brand" href="#">Kalkulus Ninja</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/homePage.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/kalkulator.html">Kalkulator</a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/QuizPage.html"
-                >Quiz</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/ProfilePage.html">Profil Kelompok </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+    <link rel="stylesheet" href="../quiz.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
+<body>
+  
+  <!-- NavBar -->
+   <div data-aos="fade-down" data-aos-duration="1500">
 
-    <!-- Quiz -->
-    <div class="container">
-      <div class="quiz-container" id="quiz">
-        <div class="quiz-header">
-          <h2>Quiz Kalkulus I</h2>
-          <div class="progress">
-            <div
-              class="progress-bar"
-              role="progressbar"
-              style="width: 0%"
-              aria-valuenow="0"
-              aria-valuemin="0"
-              aria-valuemax="100"
-            ></div>
-          </div>
-        </div>
-        <div id="question-container">
-          <p class="question" id="question"></p>
-          <div class="options" id="options"></div>
-        </div>
-        <div class="quiz-footer">
-          <div class="timer" id="timer">Time: 300</div>
-          <button class="btn btn-primary" id="next-btn">Next</button>
-        </div>
+     <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm">
+       <div class="container">
+      <img src="/img/58d3acc1-e780-4425-a872-dd162bfe942a.png " width="50cm">
+      <a class="navbar-brand" href="#">Kalkulus Ninja</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/homePage.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/Manual_Book/MANUAL BOOK KALKULUS NINJA.pdf" download>Manual Book</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Kalkulator
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/kalkulator.html">Kalkulator Linear</a>
+              <a class="dropdown-item" href="/kalkulatorKuadrat.html">Kalkulator Kuadrat</a>
+              <a class="dropdown-item" href="/kalkulatorpecahan.html">Kalkulator Pecahan</a>
+              <a class="dropdown-item" href="/kalkulatorIrasional.html">Kalkulator Irasional</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/QuizPage.html">Quiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/ProfilePage.html">Profil Kelompok</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <script src="QuizPage.js"></script>
-  </body>
+  </nav>
+</div>
+  
+<!-- Mulai quiz gank -->
+<div data-aos="fade-up" data-aos-duration="1500">
+
+  <div class="quiz-container2 jumbotron p-5 mx-auto" style="margin: 245px 0px 245px 0px"">
+    <button onclick="goToQuiz()" class="button2">
+      <h1 class="display-4 text-center font">Mulai Quiz</h1>
+    </button>
+  </div>
+</div>
+  <script>
+    function goToQuiz() {
+      Swal.fire({
+        title: "Start Quiz",
+        text: "Anda Akan Masuk Ke Halaman Quiz",
+        icon: "info",
+        showCancelButton: true,
+        confirmButtonColor: "#3085d6",
+        cancelButtonColor: "#d33",
+        confirmButtonText: "Start",
+        cancelButtonText: "Cancel"
+      }).then((result) => {
+        if (result.isConfirmed) {
+          Swal.fire({
+            title: "Quiz Started Have Fun!",
+            text: "Waktunya Adalah 5 Menit",
+          }).then(()=>{
+             window.location.href = "/quiz/QuizQuestion.html"; 
+          });
+        }
+      });
+    }
+  </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
+</body>
 </html>
