--- a/kalkulator.html
+++ b/kalkulator.html
@@ -8,55 +8,77 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="style.css" />
     <!-- Menghubungkan file CSS -->
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm">
-      <div class="container">
-        <a class="navbar-brand" href="#">Kalkulus Ninja</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
+     <div data-aos="fade-down" data-aos-duration="1500">
+
+       <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm">
+         <div class="container">
+           <img src="/img/58d3acc1-e780-4425-a872-dd162bfe942a.png " width="50cm">
+           <a class="navbar-brand" href="#">Kalkulus Ninja</a>
+           <button
+           class="navbar-toggler"
+           type="button"
+           data-bs-toggle="collapse"
+           data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown"
           aria-expanded="false"
           aria-label="Toggle navigation"
-        >
+          >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="/homePage.html">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="/Manual_Book/MANUAL BOOK KALKULUS NINJA.pdf" download>Manual Book</a>
+            </li>
+            <li class="nav-item dropdown">
               <a
-                class="nav-link active"
-                aria-current="page"
-                href="/kalkulator.html"
-                >Kalkulator</a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                >
+                Kalkulator
+              </a>
+              <div
+              class="dropdown-menu"
+              aria-labelledby="navbarDropdownMenuLink"
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/QuizPage.html">Quiz</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/ProfilePage.html">Profil Kelompok</a>
-            </li>
-          </ul>
-        </div>
+              <a class="dropdown-item" href="/kalkulator.html">Kalkulator Linear</a>
+              <a class="dropdown-item" href="/kalkulatorKuadrat.html">Kalkulator Kuadrat</a>
+              <a class="dropdown-item" href="/kalkulatorpecahan.html">Kalkulator Pecahan</a>
+              <a class="dropdown-item" href="/kalkulatorIrasional.html">Kalkulator Irasional</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/QuizPage.html">Quiz</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/ProfilePage.html">Profil Kelompok</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
+</div>
 
     <!-- Kalkulator -->
-    <div class="container1">
-      <h2>Kalkulator Pertidaksamaan Linear</h2>
-      <p>
+     <div data-aos="fade-up" data-aos-duration="1500">
+
+       <div class="container1 mt-5">
+         <h2>Kalkulator Pertidaksamaan Linear</h2>
+         <p>
         Masukkan nilai untuk <i>ax + b</i> dan pilih operator pertidaksamaan.
       </p>
 
@@ -65,7 +87,7 @@
 
       <label for="b">Konstanta b: </label>
       <input type="number" id="b" required />
-
+      
       <label for="operator">Pilih operator: </label>
       <select id="operator">
         <option value=">">></option>
@@ -73,12 +95,13 @@
         <option value=">=">>=</option>
         <option value="<="><=</option>
       </select>
-
+      
       <button onclick="solveInequality()">Hitung Pertidaksamaan</button>
 
       <h3>Hasil:</h3>
       <p id="result"></p>
     </div>
+  </div>
 
     <script>
       function solveInequality() {
@@ -116,5 +139,9 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
