--- a/ProfilePage.html
+++ b/ProfilePage.html
@@ -68,7 +68,7 @@
             <!-- Bagian kiri -->
             <div class="left-section text-center">
               <img src="/img/PROFIL SQUAD (4).png" width="100" class="rounded" />
-              <span class="bg-secondary p-1 px-4 rounded text-white d-block my-2 navbar">Front-End</span>
+              <span class="bg-secondary p-1 px-4 rounded text-white d-block my-2 navbar">Programer</span>
               <ul class="social-list list-inline d-flex justify-content-center mt-2">
                 <li class="list-inline-item"><a href="https://www.facebook.com/profile.php?id=100087995885321&mibextid=ZbWKwL">
                   <i class="fa fa-facebook"></i></li>
@@ -174,7 +174,7 @@
             <!-- Bagian kiri -->
             <div class="left-section text-center">
               <img src="/img/PROFIL SQUAD (2).png" width="100" class="rounded" />
-              <span class="bg-secondary p-1 px-4 rounded text-white d-block my-2 navbar">Back-End</span>
+              <span class="bg-secondary p-1 px-4 rounded text-white d-block my-2 navbar">Programer</span>
               <ul class="social-list list-inline d-flex justify-content-center mt-2">
                 <li class="list-inline-item"><a href="https://www.facebook.com/angga.nurdiansyah.7547?mibextid=ZbWKwL">
                   <i class="fa fa-facebook"></i></li>
