--- a/kalkulatorpecahan.html
+++ b/kalkulatorpecahan.html
@@ -107,10 +107,9 @@
         </div>
 
         <script>
-            // Tambahkan event listener pada form
             document.getElementById("calculator-form").addEventListener("submit", function (event) {
-                event.preventDefault(); // Mencegah halaman refresh
-                solveInequality(); // Panggil fungsi untuk menyelesaikan pertidaksamaan
+                event.preventDefault(); 
+                solveInequality(); 
             });
 
             function solveInequality() {
