--- a/kalkulatorKuadrat.html
+++ b/kalkulatorKuadrat.html
@@ -78,8 +78,7 @@
     <label for="operator">Pilih operator pertidaksamaan:</label>
     <select id="operator">
       <option value=">">></option>
-      <option value="<">
-        << /option>
+      <option value="<"><</option>
         <option value=">=">≥</option>
         <option value="<=">≤</option>
     </select>
