--- a/kalkulatorpecahan.html
+++ b/kalkulatorpecahan.html
@@ -87,11 +87,8 @@
                     <select id="operator">
                         <option value=">">></option>
                         <option value=">=">>=</option>
-                        <option value="<">
-                            << /option>
-                        <option value="<=">
-                            <=< /option>
-                        <option value="=">=</option>
+                        <option value="<"><</option>
+                        <option value="<="><=</option>
                     </select>
                 </div>
 
